Fixed style issues on mobile, removed comments

--- a/src/src/components/CasesSummary/CasesSummary.module.css
+++ b/src/src/components/CasesSummary/CasesSummary.module.css
@@ -27,3 +27,17 @@
 .ul>li:not(:first-child) {
     border-left: 1px solid var(--separator-color);
 }
+
+/* -------------------------------------------------
+    Media queries
+   ------------------------------------------------- */
+
+@media(max-width: 800px) {
+    .cases {
+        font-size: 1rem;
+    }
+
+    .ul li {
+        gap: .25rem;
+    }
+}
